log
Fri 17 Mar 2023 05:58:29 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|6
total_score: 10/70
af9637c
Fri 17 Mar 2023 06:05:31 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:7: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   18 |   aux = a;
      |       ^
exercises.c:20:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   20 |   b = aux;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
e1fc74a
Fri 17 Mar 2023 06:05:41 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
00cbc23
Fri 17 Mar 2023 06:15:40 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:32:10: error: expected expression before ‘int’
   32 |   *max = int* next(Lista*);
      |          ^~~
exercises.c:33:10: error: expected expression before ‘int’
   33 |   *min = int* first(Lista*);
      |          ^~~
Compilation failed
8c96c56
Fri 17 Mar 2023 06:19:55 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:10: error: expected expression before ‘int’
   33 |   *max = int* next(Lista*);
      |          ^~~
exercises.c:34:10: error: expected expression before ‘int’
   34 |   *min = int* first(Lista*);
      |          ^~~
exercises.c: In function ‘asignarValor’:
exercises.c:92:11: error: expected identifier or ‘(’ before ‘[’ token
   92 |     Vector[i] = valor;
      |           ^
Compilation failed
5f37676
